--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -209,7 +209,7 @@
                         <li class="li_body_middle_left_section">写字楼出售</li>
                     </ul>
                 </div>
-                <div class="div_body_middle_left_section" style="height: 456px;">
+                <div class="div_body_middle_left_section" style="height: 550px;">
                     <p class="p_body_middle_left_title">车辆</p>
                     <p class="p_body_middle_left_title_small">商用车</p>
                     <ul class="ul_body_middle_left_section" style="height: 90px;">
@@ -223,7 +223,7 @@
                         <li class="li_body_middle_left_section">半挂车</li>
                     </ul>
                     <p class="p_body_middle_left_title_small">二手车</p>
-                    <ul class="ul_body_middle_left_section" style="height: 180px;">
+                    <ul class="ul_body_middle_left_section" style="height: 210px;">
                         <li class="li_body_middle_left_section">0-2万</li>
                         <li class="li_body_middle_left_section">2-4万</li>
                         <li class="li_body_middle_left_section">4-8万</li>
@@ -258,15 +258,10 @@
                 </div>
                 <div class="div_body_middle_left_section" style="height: 630px;">
                     <p class="p_body_middle_left_title">宠物</p>
-                    <p class="p_body_middle_left_title_small p_body_middle_left_title_small_active">狗狗</p>
-                    <ul class="ul_body_middle_left_section" style="height: 60px;">
-                        <li class="li_body_middle_left_section">金毛</li>
-                        <li class="li_body_middle_left_section">哈士奇</li>
-                        <li class="li_body_middle_left_section">阿拉斯加</li>
-                        <li class="li_body_middle_left_section li_body_middle_left_section_active">泰迪</li>
-                        <li class="li_body_middle_left_section">斗牛犬</li>
-                        <li class="li_body_middle_left_section">格力犬</li>
-                    </ul>
+                    <div class="div_body_middle_left_section_cw">
+                        <span style="float: left;">狗狗</span>
+                        <span>金毛</span>/<span>哈士奇</span>/<span>阿拉斯加</span>/<span>泰迪</span>/<span>斗牛犬</span>/<span>格力犬</span>
+                    </div>
                     <p class="p_body_middle_left_title_small p_body_middle_left_title_small_active">猫猫</p>
                     <ul class="ul_body_middle_left_section" style="height: 60px;">
                         <li class="li_body_middle_left_section">蓝猫</li>
@@ -421,7 +416,7 @@
                 </div>
             </div>
             <div class="div_body_middle_left">
-                <div class="div_body_middle_left_section" style="height: 820px;">
+                <div class="div_body_middle_left_section" style="height: 900px;">
                     <p class="p_body_middle_left_title">生活服务</p>
                     <p class="p_body_middle_left_title_small">家政服务</p>
                     <ul class="ul_body_middle_left_section" style="height: 90px;">
@@ -469,7 +464,7 @@
                         <li class="li_body_middle_left_section">婚车租赁</li>
                     </ul>
                     <p class="p_body_middle_left_title_small">旅游服务</p>
-                    <ul class="ul_body_middle_left_section">
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
                         <li class="li_body_middle_left_section">签证服务</li>
                         <li class="li_body_middle_left_section">酒店预订</li>
                         <li class="li_body_middle_left_section">旅游度假</li>
@@ -482,14 +477,13 @@
                         <li class="li_body_middle_left_section">按摩足浴</li>
                     </ul>
                     <p class="p_body_middle_left_title_small">其他服务</p>
-                    <ul class="ul_body_middle_left_section">
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
                         <li class="li_body_middle_left_section">丽人服务</li>
                         <li class="li_body_middle_left_section">鲜花盆景</li>
                         <li class="li_body_middle_left_section">本地名站</li>
                         <li class="li_body_middle_left_section">商品出售</li>
                         <li class="li_body_middle_left_section">白事服务</li>
                         <li class="li_body_middle_left_section">工艺鉴定</li>
-                        <li class="li_body_middle_left_section">其他服务</li>
                     </ul>
                 </div>
                 <div class="div_body_middle_left_section" style="height: 240px;">
@@ -564,6 +558,44 @@
                         <li class="li_body_middle_left_section">畜禽养殖</li>
                         <li class="li_body_middle_left_section">园林花卉</li>
                         <li class="li_body_middle_left_section" style="width: 80px;">动植物种苗</li>
+                    </ul>
+                </div>
+                <div class="div_body_middle_left_section" style="height: 500px;">
+                    <p class="p_body_middle_left_title">二手市集</p>
+                    <p class="p_body_middle_left_title_small">手机数码</p>
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
+                        <li class="li_body_middle_left_section">二手手机</li>
+                        <li class="li_body_middle_left_section">笔记本</li>
+                        <li class="li_body_middle_left_section">台式电脑</li>
+                        <li class="li_body_middle_left_section">二手照相机</li>
+                        <li class="li_body_middle_left_section">数码产品</li>
+                        <li class="li_body_middle_left_section">手机配件</li>
+                        <li class="li_body_middle_left_section">平板电脑</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">生活百货</p>
+                    <ul class="ul_body_middle_left_section" style="height: 150px;">
+                        <li class="li_body_middle_left_section">母婴用品</li>
+                        <li class="li_body_middle_left_section">家用家电</li>
+                        <li class="li_body_middle_left_section">二手家具</li>
+                        <li class="li_body_middle_left_section">家居日用</li>
+                        <li class="li_body_middle_left_section">二手自行车</li>
+                        <li class="li_body_middle_left_section">文体乐器</li>
+                        <li class="li_body_middle_left_section">门票卡券</li>
+                        <li class="li_body_middle_left_section">工艺收藏</li>
+                        <li class="li_body_middle_left_section">奇石盆景</li>
+                        <li class="li_body_middle_left_section">虚拟物品</li>
+                        <li class="li_body_middle_left_section">商家全新</li>
+                        <li class="li_body_middle_left_section">物品回收</li>
+                        <li class="li_body_middle_left_section">服饰箱包</li>
+                        <li class="li_body_middle_left_section">图书音像</li>
+                        <li class="li_body_middle_left_section">食品农产</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">办公设备</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">办公用品</li>
+                        <li class="li_body_middle_left_section">办公家具</li>
+                        <li class="li_body_middle_left_section">工业设备</li>
+                        <li class="li_body_middle_left_section">设备租赁</li>
                     </ul>
                 </div>
             </div>
