--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -43,7 +43,7 @@
         <div class="div_head_right">
             <div class="div_head_right_ss">
                 <span id="spanXSLC" class="span_spaninput_out SRK">
-                    <input class="span_spaninput_in spaninput_fontcolor" id="SS" type="text" placeholder="找房子,找工作,找服务," />
+                    <input class="span_spaninput_in" id="SS" type="text" placeholder="找房子,找工作,找服务," />
                     <span class="span_ss">搜索</span>
                 </span>
                 <span class="span_head_right_ss">租房子</span>
@@ -265,7 +265,7 @@
                         <span class="span_body_middle_left_section_fl_right">哈士奇</span>
                         <em class='em_body_middle_left_section_fl_right'>/</em>
                         <span class="span_body_middle_left_section_fl_right">阿拉斯加</span>
-                        <br/>
+                        <br />
                         <span class="span_body_middle_left_section_fl_right">泰迪</span>
                         <em class='em_body_middle_left_section_fl_right'>/</em>
                         <span class="span_body_middle_left_section_fl_right">斗牛犬</span>
@@ -279,7 +279,7 @@
                         <span class="span_body_middle_left_section_fl_right">折耳猫</span>
                         <em class='em_body_middle_left_section_fl_right'>/</em>
                         <span class="span_body_middle_left_section_fl_right">加菲猫</span>
-                        <br/>
+                        <br />
                         <span class="span_body_middle_left_section_fl_right">布偶猫</span>
                         <em class='em_body_middle_left_section_fl_right'>/</em>
                         <span class="span_body_middle_left_section_fl_right">短毛猫</span>
@@ -655,6 +655,9 @@
                     </ul>
                 </div>
             </div>
+        </div>
+        <div class="div_body_bottom">
+            <p class="p_div_body_bottom_title">便民服务</p>
         </div>
     </div>
 </body>
