--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
@@ -60,7 +60,7 @@
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section{display: block;padding: 0;height: 30px;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section{display: inline-block;width: 80px;height: 30px;font-size: 14px;float: left;}
 .div_body .div_body_middle .div_body_middle_left #div_body_middle_left_section_fc .ul_body_middle_left_section .li_body_middle_left_section{display: inline-block;margin-right: 10px;width:auto ;height: 30px;font-size: 14px;float: left;}
-.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
+.div_body .div_body_middle .div_bodydiv_body_bottom_section_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section_active{color: #ef6100;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section_fl{ display: block;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section_fl .span_body_middle_left_section_fl_left{ display: inline-block;float: left;width: 75px;}
@@ -68,9 +68,14 @@
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section_fl .em_body_middle_left_section_fl_right{ display: inline-block;margin-left: 3px;margin-right: 3px;}
 
 /*首页_主体_底部*/
-.div_body .div_body_bottom{ width: 1200px;height: 250px;display: block;margin-top: 10px; overflow-x: hidden;background: #ffffff;padding: 10px 20px;}
+.div_body .div_body_bottom{ width: 1200px;height: 280px;display: block;margin-top: 10px; overflow-x: hidden;background: #ffffff;padding: 10px 20px;}
 .div_body .div_body_bottom .p_div_body_bottom_title{font-size: 16px;font-weight: 700;border-bottom: 1px solid #cccccc;display: block;height: 35px;color: #5bc0de;}
-
+.div_body .div_body_bottom .div_body_bottom_section{ width: 276px;height: 200px;border-right: 1px solid #cccccc;float: left;}
+.div_body .div_body_bottom .div_body_bottom_section .p_div_body_bottom_section_title{font-size: 14px;display: block;height: 35px;}
+.div_body .div_body_bottom .div_body_bottom_section .ul_body_bottom_section{ padding: 0;}
+.div_body .div_body_bottom .div_body_bottom_section .ul_body_bottom_section .li_body_bottom_section{ width: 80px;height: 60px;float: left;}
+.div_body .div_body_bottom .div_body_bottom_section .ul_body_bottom_section .li_body_bottom_section .p_li_body_bottom_section{ text-align: center;font-size: 13px;color: #999999;}
+.div_body .div_body_bottom .div_body_bottom_section .ul_body_bottom_section .li_body_bottom_section .p_li_body_bottom_section .img_li_body_bottom_section{ width: 28px;height: 28px;display: block;margin-left: 25px;}
 .active{color: #ef6100;}
 
 ::-webkit-input-placeholder { color:#999999; }
